Add memory allocation pattern test and expand debugging fields
Add test to investigate memory allocation variance across iterations.
Expand temporary debugging fields to track heap allocation, stack size,
warmup memory, and warmup count separately for diagnosing discrepancies
between solution and submission memory measurements.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>