@@ -107,8 +107,9 @@ class QuestionerPlugin : Plugin<Project> {
 
             testTask.jvmArgs(
                 "-ea", "--enable-preview", "-Dfile.encoding=UTF-8", "-Djava.security.manager=allow",
-                "-XX:+UseZGC", "-XX:ZCollectionInterval=8", "-XX:-OmitStackTraceInFastThrow",
-                "-Xmx4G",
+                "-XX:+UseZGC", "-XX:+ZGenerational", "-XX:-OmitStackTraceInFastThrow",
+                "-XX:+UnlockExperimentalVMOptions", "-XX:-VMContinuations",
+                "-Xmx512M", // TEMPORARY: reduced to match server heap size for debugging
                 "--add-opens", "java.base/java.lang=ALL-UNNAMED",
                 "--add-opens", "java.base/java.util=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
